--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Can CHEN / Caesar"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://canchen-caesar.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
@@ -24,9 +24,9 @@ author:
   avatar           : "profile.png"
   name             : "Can Chen"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "PhD student at PolyU"
   # location         : "Earth"
-  employer         : "The Hong Kong Polytechnic University"
+  employer         : "The Hong Kong Polytechnic University (PolyU)"
   uri              : # URL
   email            : "can-caesar.chen@connect.polyu.hk" 
 
