--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "https://www.linkedin.com/in/chencan622/"
+  linkedin         : "chencan622"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
