--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ author:
   impactstory      : # URL
   orcid            : "https://orcid.org/0000-0003-4578-0453"
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : "profile/Can-Chen-15"
+  researchgate     : "https://www.researchgate.net/profile/Can-Chen-15"
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
