--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "Photo-Sydney.jpg"
   name             : "Can Chen"
   pronouns         : # example: "she/her"  
-  bio              : "PhD student at PolyU"
+  bio              : "PhD"
   # location         : "Earth"
   employer         : "The Hong Kong Polytechnic University"
   uri              : # URL
