--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "PhD"
   # location         : "Earth"
-  employer         : "The Hong Kong Polytechnic University"
+  employer         : "EPFL"
   uri              : # URL
   email            : "can-caesar.chen@connect.polyu.hk" 
 
