--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "Photo_CantonTower.jpg"
+  avatar           : "Pthoto_Lucern_1.jpg"
   name             : "Can Chen"
   pronouns         : # example: "she/her"  
   bio              : "PhD"
